--- a/contatos.html
+++ b/contatos.html
@@ -17,25 +17,37 @@
 
         </div>
         <div id="menu">
-            <a id="corl" href="home.html">Home |</a>
-            <a id="corl" href="sobre.html">Sobre |</a>
-            <a id="corl" href="fotos.html">Fotos |</a>
-            <a id="corl" href="contatos.html">Contados |</a>
+            <a href="home.html">Home |</a>
+            <a href="sobre.html">Sobre |</a>
+            <a href="fotos.html">Fotos |</a>
+            <a href="contatos.html">Contados |</a>
         </div>
     </div>
 
     <div id="conteudo">
-        <h1 class="titulo2">Senac Caxias do Sul</h1>
-        <p class="estilizacao">
-            Mussum Ipsum, cacilds vidis litro abertis. Interessantiss quisso pudia ce receita de bolis, mais bolis eu
-            num gostis.Detraxit consequat et quo num tendi nada.Casamentiss faiz malandris se pirulitá.Mauris nec dolor
-            in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl.
-        </p>
-        <p>
+        <h1>LOCALIZAÇÃO</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.739731299616!2d-51.199026513102375!3d-29.16792917781401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951ea3200efac6ed%3A0x7cd369232232c419!2sSenac%20Caxias%20do%20Sul!5e0!3m2!1spt-BR!2sbr!4v1678925096646!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        </p>
     </div>
-
+    <div id="conteudo">
+        <h1 class="titulo">Conteudo</h1>
+        <div id="esquerda">
+            Nome: <input type="texte">
+            Email: <input type="text">
+            Assunto: <select>
+                <option>Vendas</option>
+                <option>Comercial</option>
+                <option>Financeiro</option>
+            </select>
+        </div>
+        <div id="direita">
+            <textarea>Mensagem</textarea>
+            <input type="submit" value="Enviar Mensagem">
+        </div>
+    </div>
+<br>
+<br>
+<br> 
     <div id="rodape">
         <p class="rodape_par">Caxias do Sul - RS - Senac RS</p>
     </div>
