--- a/sobre.html
+++ b/sobre.html
@@ -17,10 +17,10 @@
 
         </div>
         <div id="menu">
-            <a id="corl" href="home.html">Home |</a>
-            <a id="corl" href="sobre.html">Sobre |</a>
-            <a id="corl" href="fotos.html">Fotos |</a>
-            <a id="corl" href="contatos.html">Contados |</a>
+            <a class="corl" href="home.html">Home |</a>
+            <a class="corl" href="sobre.html">Sobre |</a>
+            <a class="corl" href="fotos.html">Fotos |</a>
+            <a class="corl" href="contatos.html">Contados |</a>
         </div>
     </div>
 
